Tue Dec 27 22:50:22 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/CosTrading.mpc:

	  Fix typo in last change.

Tue Dec 27 18:17:49 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/CosTrading.mpc:

	  Tweak so trading_serv_export.h is installed.

Tue Dec 27 17:21:54 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/CosNotification.mpc:

	  Tweak so notify_serv_export and notify_persist_export.h are
	  installed.

	* orbsvcs/orbsvcs/CosTime.mpc:

	  Tweak so time_export.h is installed.

	* orbsvcs/orbsvcs/CosEvent.mpc:
	* orbsvcs/orbsvcs/ec_typed_events_serv.mpb:

	  Tweak so that CEC_Defaults.h and event_serv_export.h are
	  installed.

Tue Dec 27 16:17:30 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/CosConcurrency.mpc:

	  Tweak so concurrency_export.h is installed.  Thanks to Vladimir
	  Panov for pointing out this class of problems.

	* tao/Makefile.am:

	  Regenerated due to new Optimized Connection Endpoint Selector
	  feature.  C.f.:

          Tue Dec 27 08:22:42 2005  Phil Mesnier  <mesnier_p@ociweb.com>

Tue Dec 27 15:33:28 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* Makefile.am:

	  Remove DISTCLEANFILES definitions.  We no longer ship
	  tao-config and tao-config.1.

	* Makefile.am:

	  Build examples and interop-tests subdirectories.

	* Makefile.am:

	  I accidently clobbered this file by checking in the MPC
	  generated version.   Restore to revision 1.13, the last
	  known good version.

Tue Dec 27 15:11:18 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* Release

	  Add aclocal.m4 to RELEASE_FILES.  Thanks to Vladimir Panov
	  < gbr at voidland dot org >.

Fri Dec 23 20:17:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>
