@@ -6,6 +6,7 @@
 #include "RequestProcessingStrategyServantLocator.h"
 #include "RequestProcessingStrategyServantActivator.h"
 #include "ace/Dynamic_Service.h"
+#include "ace/Log_Msg.h"
 
 ACE_RCSID (PortableServer,
            RequestProcessingStrategyFactoryImpl,
