@@ -1,3 +1,8 @@
+Wed Dec 28 08:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Strategies/Optimized_Connection_Endpoint_Selector.cpp:
+          Removed incorrect ; at end of method
+
 Tue Dec 27 22:50:22 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* orbsvcs/orbsvcs/Makefile.am:
@@ -187,7 +192,6 @@ Tue Dec 27 08:22:42 2005  Phil Mesnier  <mesnier_p@ociweb.com>
 
           The alternate IIOP test now uses the Optimized Connection
           Endpoint Selector to speed up the selection of the correct endpoint.
-
 
 Tue Dec 27 09:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
